tests/netconvert/import/XML/errors/broken_edge/edge#length__empty4/errors.netconvert
Error: Attribute 'length' in definition of edge '4' is empty.
Quitting (on error).
